<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tvTipoDeLancamento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tipo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rgTipoDeLancamento"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvTipoDeLancamento"
        >

        <RadioButton
            android:id="@+id/rbCredito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/credito" />

        <RadioButton
            android:id="@+id/rbDebito"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/debito" />
    </RadioGroup>


    <TextView
        android:id="@+id/tvNome"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/rgTipoDeLancamento"
        android:layout_height="wrap_content"
        android:text="@string/nome_do_lanc" />

    <EditText
        android:id="@+id/etNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Descrição do Lançamento"
        android:ems="10"
        android:inputType="textCapWords"
        app:layout_constraintStart_toEndOf="@id/tvNome"
        app:layout_constraintTop_toTopOf="@id/tvNome"
        app:layout_constraintBottom_toBottomOf="@id/tvNome" />



    <TextView
        android:id="@+id/tvValor"
        android:layout_width="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@id/etNome"
        android:layout_height="wrap_content"
        android:text="@string/valor" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Valor em R$"
        android:ems="10"
        android:inputType="numberDecimal"
        android:digits="0123456789.,"
        app:layout_constraintStart_toEndOf="@id/tvValor"
        app:layout_constraintTop_toTopOf="@id/tvValor"
        app:layout_constraintBottom_toBottomOf="@id/tvValor" />

    <TextView
        android:id="@+id/tvData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etValor"
        android:text="@string/data_lanc" />


    <EditText
        android:id="@+id/etData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Data da transação"
        android:ems="10"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@id/tvData"
        app:layout_constraintStart_toEndOf="@id/tvData"
        app:layout_constraintTop_toTopOf="@id/tvData" />

    <TextView
        android:id="@+id/tvCod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etData"
        android:text="@string/codigo" />


    <EditText
        android:id="@+id/etCod"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints="Código do Lançamento"
        android:inputType="number"
        android:ems="10"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/tvCod"
        app:layout_constraintStart_toEndOf="@id/tvCod"
        app:layout_constraintTop_toTopOf="@id/tvCod" />

    <Button
        android:id="@+id/btSalvar"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etCod"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/salvar" />

    <Button
        android:id="@+id/btVerLancamentos"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSalvar"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/ver_lan_amentos" />

    <Button
        android:id="@+id/btExcluir"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btVerLancamentos"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/excluir" />

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>